Guess who's back - Java 8 is back again - tell a friend  (#307)
* java 8 and new bom

* changelog and version

* fix

* fix

* comments

---------

Co-authored-by: Ohad Bitton <ohbitton@microsoft.com>